--- a/src/main/java/com/google/QA/Config/config.properties
+++ b/src/main/java/com/google/QA/Config/config.properties
@@ -1,5 +1,5 @@
 # Browser config data #
-browserName = chrome
+browserName = edge
 
 # wait #
 implicitWait = 20
@@ -9,9 +9,15 @@ test_URL = https://www.google.com
 
 # page url #
 expectedGmailPageUrl = https://www.google.com/intl/en-US/gmail/about/
+expectedGoogleMapsPageUrl = https://www.google.com/maps
+expectedYouTubePageUrl = https://www.youtube.com/
 
 # page title #
 expectedGoogleImagesPageTitle = Google Images
+expectedGoogleMapsPageTitle = Google Maps
+expectedYouTubePageTitle = YouTube
 
 # error msg #
 expectedNoSearchResultErrorMsg= No results containing all your search terms were found.
+
+
